# libnss-pgsql

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.guess  config.h.in  config.sub  configure  configure.ac  configure.in  install-sh  libnss-pgsql_1.0.0.orig.tar.gz.delta  libnss-pgsql_1.0.0.orig.tar.gz.id  libnss-pgsql_1.0.2.orig.tar.gz.delta  libnss-pgsql_1.0.2.orig.tar.gz.id  libnss-pgsql_1.1.orig.tar.gz.delta  libnss-pgsql_1.1.orig.tar.gz.id  libnss-pgsql_1.2.orig.tar.gz.delta  libnss-pgsql_1.2.orig.tar.gz.id  libnss-pgsql_1.3.orig.tar.gz.delta  libnss-pgsql_1.3.orig.tar.gz.id  libnss-pgsql_1.4.0.orig.tar.gz.delta  libnss-pgsql_1.4.0.orig.tar.gz.id  libnss-pgsql_1.4.0debian.orig.tar.gz.delta  libnss-pgsql_1.4.0debian.orig.tar.gz.id  ltmain.sh  mkinstalldirs
conf/: dbschema.sql  nss-pgsql-newsyntax.conf  nss-pgsql.conf  nsswitch.conf
debian/: changelog  control  copyright  libnss-pgsql1.docs  libnss-pgsql1.files  libnss-pgsql1.links  libnss-pgsql2.doc-base  libnss-pgsql2.examples  libnss-pgsql2.files  libnss-pgsql2.install  libnss-pgsql2.symbols  rules  watch
debian/patches/: 00list  01_fix_locks.dpatch  01_fix_locks.patch  02_fix_retcode.dpatch  02_fix_retcode.patch  03_fix_errno.dpatch  03_fix_errno.patch  04_use_array_for_getgrent.dpatch  04_use_array_for_getgrent.patch  series  (+8 more)
doc/: .nss-pgsql.xml.swp  Makefile  Makefile.am  Makefile.in  config.xsl  nss-pgsql.ps  nss-pgsql.sgml  nss-pgsql.txt  nss-pgsql.xml
src/: Makefile.am  Makefile.in  backend.c  config.c  interface.c  libnss_pgsql.map  nss-pgsql.h  util.c
